Bootrap and Dynamic Routes

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body class="minimal">
+    <!-- <script type="text/javascript" src="./main.js"></script> -->
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
@@ -23,3 +24,4 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
